--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,13 @@
   pointer-events: none;
 }
 
+.navbar a{
+  color: rgb(3, 58, 25);
+}
+.navbar a:hover{
+  color: rgb(18, 216, 18);
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
